# xsoldier

./: .gitignore  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  README  aclocal.m4  boss.c  boss.h  callback.c  callback.h  common.c  common.h  config.h.in  configure  configure.ac  ending.c  ending.h  enemy.c  enemy.h  enemyshot.c  enemyshot.h  extern.h  game.c  game.h  graphic.c  graphic.h  image.c  image.h  input.c  input.h  joystick.c  joystick.h  key.h  main.c  manage.c  manage.h  opening.c  opening.h  (+11 more)
old-doc/: CONDITION  ChangeLog.jp  README.1st  README.joystick  README.score
